--- a/docker/build
+++ b/docker/build
@@ -34,14 +34,6 @@ make bin/docker-app
 )
 
 (
-out "Building buildx cli plugin"
-
-cdgopath buildx github.com/docker/buildx
-go build -o bin/docker-buildx -ldflags "-X github.com/docker/buildx/version.Version=$(git describe --match 'v[0-9]*' --always --tags)-tp-docker  -X github.com/docker/buildx/version.Revision=$(git rev-parse HEAD) -X github.com/docker/builx/version.Package=github.com/docker/buildx -X main.experimental=1" ./cmd/buildx
-go clean -modcache
-)
-
-(
 out "Building daemon"
 
 cdgopath docker-ce/components/engine github.com/docker/docker
@@ -88,3 +80,7 @@ install -Dm644 contrib/completion/bash/docker       "$1/usr/share/bash-completio
 install -Dm644 contrib/completion/zsh/_docker       "$1/usr/share/zsh/site-functions/_docker"
 install -Dm644 contrib/completion/fish/docker.fish  "$1/usr/share/fish/vendor_completions.d/docker.fish"
 )
+
+install -Dm755 run                "$1/etc/sysmgr/docker"
+install -Dm755 run                "$1/etc/runit/docker/run"
+ln -s /run/runit/supervise.docker "$1/etc/runit/docker/supervise"
