--- a/docker/build
+++ b/docker/build
@@ -10,6 +10,7 @@ cdgopath() {
 out() { printf '\033[1;33m-> \033[m%s\n' "$@" ;}
 
 export GOPATH=$PWD
+export GO111MODULE=auto
 export PATH=$GOPATH/bin:$PATH
 trap "go clean -modcache" EXIT INT
 
@@ -81,6 +82,4 @@ install -Dm644 contrib/completion/zsh/_docker       "$1/usr/share/zsh/site-funct
 install -Dm644 contrib/completion/fish/docker.fish  "$1/usr/share/fish/vendor_completions.d/docker.fish"
 )
 
-install -Dm755 run                "$1/etc/sysmgr/docker"
-install -Dm755 run                "$1/etc/runit/docker/run"
-ln -s /run/runit/supervise.docker "$1/etc/runit/docker/supervise"
+DESTDIR=$1 install-sv docker.run
